# dj-cratedigger

./: CRATEDIGGER_NEXT_STEPS.md  CRATEDIGGER_WORKFLOW_PLAN_V2.md  PROJECT_STATUS.md  README.md  REVIEW.md  STREAMING_SETUP_LEARNINGS.md  library_report.md  music_report_after.md  music_report_final.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cratedigger/: __init__.py  __main__.py  cli.py  metadata.py  models.py  player.py  report.py  report_html.py  scanner.py
cratedigger/analyzers/: duplicates.py  filename.py  tags.py
cratedigger/audio_analysis/: analyzer.py  bpm.py  key.py
cratedigger/audit/: __init__.py  report.py  scanner.py  stale.py  stale_report.py
cratedigger/cli/: __init__.py  analysis.py  audit_cmd.py  dig.py  dig_artist_deep.py  dig_session.py  gig.py  gig_crate.py  gig_export.py  gig_practice.py  intake.py  play.py  preflight_cmd.py  profile_enhanced.py  profile_folder_cmd.py  scan.py  stale_cmd.py  streaming.py  tools.py  wishlist_cmd.py
cratedigger/core/: analyzer.py  batch_analyzer.py  enrich.py  fingerprint.py  watcher.py
cratedigger/digger/: artist_research.py  festival.py  label.py  profile.py  sleeping.py  spotify_genres.py  weekly_dig.py
docs/: design-research.md
sample_output/: example_report.md
tests/: create_fixtures.py  test_analyzers.py  test_artist_profile.py  test_artist_research.py  test_audit.py  test_batch_analyzer.py  test_camelot.py  test_cli_analyze.py  test_core_analyzer.py  test_crate_practice.py  test_cue_generator.py  test_dig_session.py  test_enrich.py  test_essentia_smoke.py  test_festival.py  test_fingerprint.py  test_gig_crate.py  test_gig_export.py  test_intake.py  test_label.py  test_metadata.py  test_player.py  test_playlist_builder.py  test_practice.py  test_preflight.py  test_profile.py  test_profile_enhanced.py  test_rekordbox_parser.py  test_rekordbox_writer.py  test_report_html.py  test_scanner.py  test_sleeping.py  test_spotify.py  test_stale.py  test_structure_analyzer.py  test_usb_preflight.py  test_watcher.py  test_weekly_dig.py  test_wishlist.py  test_youtube.py
web/: api.py
(+70 files in other folders)
